--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <sling.password>admin</sling.password>
         <vault.user>admin</vault.user>
         <vault.password>admin</vault.password>
+<!--        <frontend-maven-plugin.version>1.7.6</frontend-maven-plugin.version>-->
         <core.wcm.components.version>2.13.0</core.wcm.components.version>
         <bnd.version>5.1.2</bnd.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
